#188 Add updatedAt to bill model and check if it's equal with the DB state on an update
